# nd_r_complexity

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/: index.md
experimental/plots/: create_bfs_plot.py  create_grid_plot_knn.py
src/: loader.py  main.py  print_functions.py  search.py
src/experimental/plots/: create_knapsack_plot.py
src/nd_r_complexity/: constants.py  model_search.py  print_functions.py  search.py
tests/: test_search.py
