[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nd_r_complexity"
version = "0.0.1"
authors = [
  { name="Rares Folea", email="rares.folea@stud.acs.upb.ro" },
]
description = "A package to estimate the big r-theta complexity for a given dataset."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "joblib",
    "tqdm",
]

[project.scripts]
nd-r-complexity = "nd_r_complexity.main:main"
nd-r-complexity-print-functions = "nd_r_complexity.print_functions:main"

[project.urls]
"Homepage" = "https://github.com/raresraf/nd_r_complexity"
"Bug Tracker" = "https://github.com/raresraf/nd_r_complexity/issues"
